# cdbc

./: Cargo.toml  README.md  test.sh
cdbc-macro/: Cargo.toml
cdbc-macro/src/: crud.rs  lib.rs  scan.rs
cdbc-mssql/: Cargo.toml
cdbc-mssql/src/: arguments.rs  column.rs  database.rs  error.rs  lib.rs  query_result.rs  row.rs  statement.rs  transaction.rs  type_info.rs  value.rs
cdbc-mssql/src/connection/: establish.rs  executor.rs  mod.rs  prepare.rs  stream.rs
cdbc-mssql/src/io/: buf.rs  mod.rs
cdbc-mssql/src/options/: connect.rs  mod.rs  parse.rs
cdbc-mssql/src/protocol/: col_meta_data.rs  done.rs  env_change.rs  error.rs  header.rs  info.rs  login.rs  login_ack.rs  message.rs  mod.rs  order.rs  packet.rs  pre_login.rs  return_status.rs  return_value.rs  row.rs  rpc.rs  sql_batch.rs  type_info.rs
cdbc-mssql/src/types/: bool.rs  float.rs  int.rs  mod.rs  str.rs
cdbc-mysql/: Cargo.toml
cdbc-mysql/src/: arguments.rs  collation.rs  column.rs  database.rs  error.rs  lib.rs  query_result.rs  row.rs  statement.rs  transaction.rs  type_info.rs  value.rs
cdbc-mysql/src/connection/: auth.rs  establish.rs  executor.rs  mod.rs  stream.rs  tls.rs
cdbc-mysql/src/io/: buf.rs
cdbc-mysql/src/options/: connect.rs  mod.rs  parse.rs  ssl_mode.rs
cdbc-mysql/src/protocol/: auth.rs  packet.rs
cdbc-mysql/src/protocol/connect/: auth_switch.rs  handshake.rs  handshake_response.rs  ssl_request.rs
cdbc-mysql/src/protocol/response/: eof.rs  err.rs  ok.rs
cdbc-mysql/src/protocol/statement/: execute.rs  prepare.rs  prepare_ok.rs  row.rs  stmt_close.rs
cdbc-mysql/src/protocol/text/: column.rs  ping.rs  query.rs  quit.rs  row.rs
cdbc-mysql/src/types/: bigdecimal.rs  bool.rs  bytes.rs  chrono.rs  decimal.rs  float.rs  int.rs  json.rs  str.rs  time.rs  uint.rs  uuid.rs
cdbc-pg/: Cargo.toml
cdbc-pg/src/: arguments.rs  column.rs  copy.rs  database.rs  error.rs  lib.rs  listener.rs  migrate.rs  query_result.rs  row.rs  statement.rs  transaction.rs  type_info.rs  value.rs
cdbc-pg/src/connection/: describe.rs  establish.rs  executor.rs  mod.rs  sasl.rs  stream.rs  tls.rs
cdbc-pg/src/io/: buf_mut.rs
cdbc-pg/src/message/: authentication.rs  backend_key_data.rs  bind.rs  close.rs  command_complete.rs  copy.rs  data_row.rs  describe.rs  execute.rs  flush.rs  mod.rs  notification.rs  parameter_description.rs  parameter_status.rs  parse.rs  password.rs  query.rs  ready_for_query.rs  response.rs  row_description.rs  sasl.rs  ssl_request.rs  startup.rs  sync.rs  terminate.rs
cdbc-pg/src/options/: connect.rs  mod.rs  parse.rs  pgpass.rs  ssl_mode.rs
cdbc-pg/src/types/: array.rs  bigdecimal.rs  bit_vec.rs  bool.rs  bytes.rs  decimal.rs  float.rs  int.rs  interval.rs  ipnetwork.rs  json.rs  mac_address.rs  mod.rs  money.rs  numeric.rs  range.rs  record.rs  str.rs  time_tz.rs  tuple.rs  uuid.rs  void.rs
cdbc-pg/src/types/chrono/: date.rs  datetime.rs  time.rs
cdbc-pg/src/types/time/: date.rs  datetime.rs  mod.rs  time.rs
cdbc-sqlite/: Cargo.toml
cdbc-sqlite/src/: arguments.rs  column.rs  database.rs  error.rs  lib.rs  migrate.rs  query_result.rs  row.rs  transaction.rs  type_info.rs  value.rs
cdbc-sqlite/src/connection/: collation.rs  describe.rs  establish.rs  execute.rs  executor.rs  executor_mut.rs  explain.rs  handle.rs  mod.rs  worker.rs
cdbc-sqlite/src/options/: auto_vacuum.rs  connect.rs  journal_mode.rs  locking_mode.rs  mod.rs  parse.rs  synchronous.rs
cdbc-sqlite/src/statement/: handle.rs  mod.rs  virtual.rs  worker.rs
cdbc-sqlite/src/types/: bool.rs  bytes.rs  chrono.rs  float.rs  int.rs  json.rs  mod.rs  str.rs  time.rs  uint.rs  uuid.rs
example/: Cargo.toml
example/benchmark/: Cargo.toml  wrk.sh  wrk_result.md
example/benchmark/src/: actix-web-sqlx.rs  axum-sqlx.rs  cogo-cdbc.rs  may-cdbc.rs  mco-cdbc.rs
example/src/: macro_scan.rs  main-mysql.rs  main-pg.rs  main-sqlite.rs  main.rs  scan_row.rs
example/src/cogo/: main.rs
example/src/cogo-http/: main.rs
example/src/http/: main.rs
example/src/http-may/: main.rs
example/src/may/: main.rs
example/src/may-http/: main.rs
example/src/mco/: main.rs
example/src/mco-http/: main.rs
example/src/mssql/: main-mssql.rs
example/src/mysql/: main-mysql.rs
example/src/postgres/: main-pg.rs
example/src/scan/: main-scan.rs
example/src/sqlite/: main-sqlite.rs
example/src/transaction/: tx.rs
src/: acquire.rs  arguments.rs  column.rs  connection.rs  database.rs  decode.rs  describe.rs  encode.rs  error.rs  executor.rs  executor2.rs  from_row.rs  lib.rs  query.rs  query_as.rs  query_scalar.rs  row.rs  statement.rs  transaction.rs  value.rs
src/db/: mod.rs
src/db/mysql/: column.rs  mod.rs  row.rs  statement.rs  transaction.rs
src/db/mysql/connection/: auth.rs  establish.rs  executor.rs  mod.rs  stream.rs  tls.rs
src/db/mysql/options/: connect.rs  mod.rs
src/io/: box_stream.rs  buf_stream.rs  chan_stream.rs  decode.rs  encode.rs  mod.rs  write_and_flush.rs
src/net/: mod.rs  socket.rs
src/net/tls/: mod.rs
src/pool/: connection.rs  executor.rs  inner.rs  maybe.rs  mod.rs  options.rs  semaphore.rs
src/types/: mod.rs
src/utils/: async_stream.rs  crud.rs  mod.rs  scan.rs  ustr.rs
