[workspace]
members = [
  "example"
]

[package]
name = "cdbc"
version = "0.1.0"
edition = "2021"
authors = ["zhuxiujia@qq.com"]


[features]
default = []
offline = ["serde"]
_tls-native-tls = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
may = "0.3"
hashlink = "0.7.0"
thiserror = "1.0.30"
bytes = '1.0.0'
memchr = "2.3.4"
serde={version = "1.0.130" ,optional = true}
log = { version = "0.4.8", default-features = false }


crossbeam-queue = "0.3.1"
crossbeam-channel = "0.5.0"
crossbeam-utils = { version = "0.8.1", default-features = false }

either = "1.5.3"
bstr = { version = "0.2.14", default-features = false, features = ["std"], optional = true }

native-tls = {version ="0.2"}
generic-array = {version ="^0.14.4",features = ["serde"]}
rand = {version = "0.8.4",features = ["std","serde"]}
rsa = {version = "0.5.0",features = ["std","serde","serde_crate"]}
sha1 = {version = "0.6.0",features = ["std","serde"]}
sha2 = {version = "0.10.0",features = ["std"]}
base64 = {version="0.13.0",features = ["std"]}