[workspace]
members = [
  "example",
  "cdbc-mysql"
]

[package]
name = "cdbc"
version = "0.1.0"
edition = "2021"
authors = ["zhuxiujia@qq.com"]


[features]
default = []
offline = ["serde", "either/serde"]
_tls-native-tls = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
may = "0.3"
hashlink = "0.7.0"
thiserror = "1.0.30"
bytes = '1.0.0'
memchr = "2.3.4"
serde={version = "1.0.130" ,optional = true}
log = { version = "0.4.8", default-features = false }
crossbeam-queue = "0.3.1"
either = "1.5.3"
bstr = { version = "0.2.14", default-features = false, features = ["std"] }
native-tls = {version ="0.2"}
ahash = "0.7.2"