[workspace]
members = [
  "example",
  "example/benchmark",
  "cdbc-mysql",
  "cdbc-pg",
  "cdbc-sqlite",
]

[package]
name = "cdbc"
version = "0.1.12"
edition = "2021"
authors = ["zhuxiujia@qq.com"]
description = "Rust Coroutine Database Driver Connectivity"
repository = "https://github.com/co-rs/cdbc"
license = "Apache-2.0"

[features]
default = []
_tls-native-tls = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cogo = "0.1"
hashlink = "0.7.0"
thiserror = "1.0.30"
bytes = '1.0.0'
memchr = "2.3.4"
serde={version = "1.0.130"}
log = { version = "0.4.8", default-features = false }
crossbeam-queue = "0.3.1"
either = {version = "1.5.3",features = ["serde"]}
bstr = { version = "0.2.14", default-features = false, features = ["std"] }
native-tls = {version ="0.2"}
ahash = "0.7.2"
serde_json = { version = "1.0.51", features = ["raw_value"]}
