[package]
name = "cdbc-macro"
version = "0.1.0"
edition = "2021"
authors = ["zhuxiujia@qq.com"]
description = "Rust Coroutine Database Driver Connectivity"
repository = "https://github.com/co-rs/cdbc"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
debug_mode = []
[lib]
proc-macro = true
[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

