[package]
name = "cdbc-mssql"
version = "0.1.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["cdbc","offline", "time"]
offline = ["serde", "either/serde"]

[dependencies]
cdbc = { version = "0.1.14", path = "../", optional = true }
mco = "0.1"
either = "1.5.3"
once_cell = "1.9"
regex = "1.5"
bytes = "1.1"
percent-encoding = "2.1"
url = "1.7"
byteorder = "1.4"
bitflags = "1.3"
uuid = "0.8"
encoding_rs = { version = "0.8.30"}
itoa = "1.0.1"
serde = { version = "1.0.130", optional = true }
serde_json = { version = "1.0.51", features = ["raw_value"], optional = true }
time = { version = "0.3", optional = true }

