[package]
name = "cdbc-mysql"
version = "0.1.0"
edition = "2021"
authors = ["zhuxiujia@qq.com"]
description = "Rust Coroutine Database Driver Connectivity"
repository = "https://github.com/rbatis/cdbc"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["offline"]
offline = ["serde", "either/serde"]
_tls-native-tls = []

# types
all-types = [
    "chrono",
    "time",
    "bigdecimal",
    "decimal",
    "json",
    "uuid",
]
bigdecimal = ["bigdecimal_", "num-bigint"]
decimal = ["rust_decimal", "num-bigint"]
json = ["serde", "serde_json"]

[dependencies]
cdbc = { version = "0.1.0", path = "../"}

may = "0.3"
hashlink = "0.7.0"
thiserror = "1.0.30"
bytes = '1.0.0'
memchr = "2.3.4"
serde={version = "1.0.130" ,optional = true}
log = { version = "0.4.8", default-features = false }

either = "1.5.3"
bstr = { version = "0.2.14", default-features = false, features = ["std"] }
native-tls = {version ="0.2"}
generic-array = {version ="^0.14.4",features = ["serde"]}
rand = {version = "0.8.4",features = ["std","serde"]}
rsa = {version = "0.4.0",features = ["std","serde","serde_crate"]}
sha-1 = {version = "0.9.0", default-features = false}
sha2 = {version = "0.9.0", default-features = false}
base64 = {version="0.13.0",features = ["std"]}
digest = {version = "0.9.0"}
smallvec = "1.7.0"
byteorder = { version = "1.3.4",  features = ["std"] }
ahash = "0.7.2"
percent-encoding = "2.1.0"
url = { version = "2.1.1" }
bitflags = { version = "1.2.1" }
bigdecimal_ = { version = "0.2.0", optional = true, package = "bigdecimal" }
serde_json = { version = "1.0.51", features = ["raw_value"], optional = true }
chrono = { version = "0.4.11", default-features = false, features = ["clock"], optional = true }
time = { version = "0.2.16", optional = true }
uuid = { version = "0.8.1", default-features = false, optional = true, features = ["std"] }
num-bigint = { version = "0.3.1", default-features = false, optional = true, features = ["std"] }
rust_decimal = { version = "1.8.1", optional = true }