[package]
name = "cdbc-pg"
version = "0.1.2"
edition = "2021"
authors = ["zhuxiujia@qq.com"]
description = "Rust Coroutine Database Driver Connectivity"
repository = "https://github.com/co-rs/cdbc"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["postgres"]
_tls-native-tls = []
postgres = [
    "md-5",
    "sha2",
    "base64",
    "sha-1",
    "rand",
    "hmac",
    "json",
    "dirs"
]
# types
all-types = [
    "chrono",
    "time",
    "bigdecimal",
    "decimal",
    "ipnetwork",
    "mac_address",
    "json",
    "uuid",
    "bit-vec",
]
ipnetwork = ["libc","ipnetwork_"]
bigdecimal = ["bigdecimal_", "num-bigint"]
decimal = ["rust_decimal", "num-bigint"]
json = ["serde", "serde_json"]


[dependencies]
cdbc = { version = "0.1.1", path = "../"}

atoi = "0.4.0"
smallvec = "1.4.0"
may = "0.3"
hashlink = "0.7.0"
thiserror = "1.0.30"
bytes = '1.0.0'
memchr = "2.3.4"
serde = {version = "1.0.130" ,features = ["derive", "rc"],optional = true}
log = { version = "0.4.8", default-features = false }

serde_json = { version = "1.0.51", features = ["raw_value"], optional = true }

native-tls = {version ="0.2"}
either = "1.5.3"
md-5 = { version = "0.9.0", default-features = false, optional = true }
sha2 = { version = "0.9.0", default-features = false, optional = true }
base64 = { version = "0.13.0", default-features = false, optional = true, features = ["std"] }
sha-1 = { version = "0.9.0", default-features = false, optional = true }
rand = { version = "0.8.3", default-features = false, optional = true, features = ["std", "std_rng"] }
hmac = { version = "0.11.0", default-features = false, optional = true }
dirs = { version = "3.0.1", optional = true }
stringprep = "0.1.2"
byteorder = { version = "1.3.4", default-features = false, features = ["std"] }
percent-encoding = "2.1.0"
url = { version = "2.1.1", default-features = false }
bitflags = { version = "1.2.1", default-features = false }
itoa = "0.4.5"
whoami = "1.0.1"
hex = "0.4.2"
chrono = { version = "0.4.11", default-features = false, features = ["clock"], optional = true }
time = { version = "0.2.16", optional = true }
ipnetwork_ = { version = "0.17.0", default-features = false, optional = true,package = "ipnetwork" }
mac_address = { version = "1.1", default-features = false, optional = true }
uuid = { version = "0.8.1", default-features = false, optional = true, features = ["std"] }
bit-vec = { version = "0.6.2", optional = true }
bigdecimal_ = { version = "0.2.0", optional = true, package = "bigdecimal" }
num-bigint = { version = "0.3.1", default-features = false, optional = true, features = ["std"] }
rust_decimal = { version = "1.8.1", optional = true }
libc = {version = "0.2.71", optional = true}