[package]
name = "cdbc-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["sqlite","offline"]
offline = ["cdbc/offline"]
_tls-native-tls = []
json= ["serde","serde_json","cdbc/json"]

sqlite = ["libsqlite3-sys","json"]

[dependencies]

may = "0.3"

cdbc = { path = "../",optional = true}
serde={version = "1.0.130" ,features = ["derive", "rc"],optional = true}
serde_json = { version = "1.0.51", features = ["raw_value"], optional = true }
log = { version = "0.4.8", default-features = false }
url = { version = "2.1.1", default-features = false }
percent-encoding = "2.1.0"
bytes = "1.0.0"
smallvec = "1.4.0"
indexmap = "1.6.2"
ahash = "0.7.2"
atoi = "0.4.0"
either = "1.5.3"
libc = "0.2.71"
libsqlite3-sys = { version = "0.23.1", optional = true, default-features = false, features = [
    "pkg-config",
    "vcpkg",
    "bundled",
] }

