[package]
name = "cdbc-sqlite"
version = "0.1.4"
edition = "2021"
authors = ["zhuxiujia@qq.com"]
description = "Rust Coroutine Database Driver Connectivity"
repository = "https://github.com/co-rs/cdbc"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["sqlite","offline"]
offline = []
_tls-native-tls = []
json= ["serde","serde_json"]

sqlite = ["libsqlite3-sys","json"]
# types
all-types = [
    "chrono",
    "json",
    "uuid",
]
[dependencies]

cogo = "0.1.1"
cdbc = { version = "0.1.4", path = "../"}
serde={version = "1.0.130" ,features = ["derive", "rc"],optional = true}
serde_json = { version = "1.0.51", features = ["raw_value"], optional = true }
log = { version = "0.4.8", default-features = false }
url = { version = "2.1.1", default-features = false }
crossbeam-channel = "0.5.1"
chrono = { version = "0.4.11", default-features = false, features = ["clock"], optional = true }
uuid = { version = "0.8.1", default-features = false, optional = true, features = ["std"] }
bitflags = { version = "1.2.1", default-features = false }
percent-encoding = "2.1.0"
bytes = "1.0.0"
smallvec = "1.4.0"
indexmap = "1.6.2"
ahash = "0.7.2"
atoi = "0.4.0"
either = "1.5.3"
libc = "0.2.71"
libsqlite3-sys = { version = "0.23.1", optional = true, default-features = false, features = [
    "pkg-config",
    "vcpkg",
    "bundled",
] }

