[package]
name = "example"
version = "0.1.0"
edition = "2021"
authors = ["zhuxiujia <zhuxiujia@qq.com>"]
publish = false

[[bin]]
name = "mysql"
path = "src/mysql/main-mysql.rs"

[[bin]]
name = "pg"
path = "src/postgres/main-pg.rs"

[[bin]]
name = "sqlite"
path = "src/sqlite/main-sqlite.rs"

[[bin]]
name = "scanrow"
path = "src/macro_scan.rs"

[[bin]]
name = "mayhttp"
path = "src/http-may/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

may = "0.3"

cdbc = {path = "../"}
cdbc-mysql = {path = "../cdbc-mysql"}
cdbc-pg = {path = "../cdbc-pg"}
cdbc-sqlite = {path = "../cdbc-sqlite"}

log = "0.4"
fast_log = "1.4"

may_minihttp = { git = "https://github.com/Xudong-Huang/may_minihttp.git" }
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"