[package]
name = "example"
version = "0.1.0"
edition = "2021"
authors = ["zhuxiujia <zhuxiujia@qq.com>"]
publish = false

[[bin]]
name = "mysql"
path = "src/mysql/main-mysql.rs"

[[bin]]
name = "pg"
path = "src/postgres/main-pg.rs"

[[bin]]
name = "sqlite"
path = "src/sqlite/main-sqlite.rs"

[[bin]]
name = "mssql"
path = "src/mssql/main-mssql.rs"


[[bin]]
name = "scanrow"
path = "src/macro_scan.rs"

[[bin]]
name = "mco"
path = "src/mco/main.rs"

[[bin]]
name = "mcohttp"
path = "src/mco-http/main.rs"

[[bin]]
name = "tx"
path = "src/transaction/tx.rs"

[[bin]]
name = "scan"
path = "src/scan/main-scan.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mco = "0.1"
mco-http = "0.1"

cdbc = { path = "../" }
cdbc-mysql = { path = "../cdbc-mysql" }
cdbc-pg = { path = "../cdbc-pg" }
cdbc-sqlite = { path = "../cdbc-sqlite" }
cdbc-mssql = { path = "../cdbc-mssql" }

log = "0.4"
fast_log = "1.4"
serde = "1.0"
serde_json = "1.0"