[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "mco-cdbc"
path = "src/mco-cdbc.rs"
[[bin]]
name = "actix"
path = "src/actix-web-sqlx.rs"
[[bin]]
name = "axum"
path = "src/axum-sqlx.rs"

[dependencies]
mco = "0.1"
cdbc = {path = "../../"}
cdbc-mysql = {path = "../../cdbc-mysql"}
log = "0.4"
fast_log = "1.4"
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
mco-http = "0.1"


#actix
actix-web = "3"
actix-http = "2.0"
actix-rt = "1.0"
sqlx-core = {version="0.5.9",features = ["runtime-tokio-rustls","mysql"]}
async-std = "1.10"
tokio = {version="1.15", features = ["full"] }
axum = "0.4"
hyper = "0.14"